# offline-3D-exp

./: .dockerignore  .gitignore  DATA_COLLECTION_GUIDE.md  Dockerfile  EPIC_Auto_Detection_Analysis.md  EPIC_Data_Pipeline.md  data_collection.sh  data_collection_script.py  debug_viewpoint_benefits.py  docker-compose.yml  enhanced_topo_extraction_demo.md  filter_topo_v2.py  neural_tsp_edge_generation_fix_report.md  neural_tsp_server_fix_report.md  quick_start.sh  run_data_collection.sh
duplicated/: EPIC3D_Data_Processing_Design.md  EPIC3D_System_Completion_Report.md  analyze_files.py  data_collection_script_v2.py  debug_stats.py  epic3d_data_adapter.py  epic3d_demo.py  epic3d_final_test.py  filter_topo_data.py  format_alignment_checker.py  format_checker.py  kill_exploration.sh  quick_test.py  test_epic3d_pipeline.py  test_real_data.py  (+2 more)
src/offline/: CMakeLists.txt  EPIC3D_Dataset_Processing_Pipeline_Guide.md  README.md  benchmark_optimization.py  build_epic3d_dataset.py  config.yaml  deep_data_analysis.py  epic3d_data_processor.py  epic3d_rl_config.yaml  graph_buffer.py  neural_tsp_server.py  package.xml  setup.py  train.py  trainer.py  utils.py  worker.py
src/offline/agent/: awr.py  bc.py  cql.py  ddql.py  iql.py  td3bc.py
src/offline/agent/model/: categorical_utils.py  diffusion_discrete.py  graph_denoiser.py  schedules.py  sgformer.py
src/offline/model/: categorical_utils.py  ddql_graph_discrete.py  ddql_graph_discrete_backtracking.py  diffusion_discrete.py  graph_denoiser.py  schedules.py
src/offline/model/sgformer/: modules.py  sgformer.py
src/offline/ref/: data_collector.py  exploration.py  graph_buffer.py  sgformer.py  trainer_ddp.py  worker.py
src/offline/test_outputs/: dungeon_multi_episodes_batch_3.h5
(+53 files in other folders)
