<?xml version="1.0"?>
<package format="2">
  <name>epic_offline</name>
  <version>1.0.0</version>
  <description>EPIC offline training and neural TSP service</description>
  
  <maintainer email="admin@epic.com">EPIC Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export></export>
</package>
